--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,14 @@
 
     <form method="POST">
         <input type="text" name="nom" placeholder="Entrez votre nom" required>
+        <select name="utilisateur" id="utilisateur">
+            <option value="">--Choisir--</option>
+            <option value="Amandine">Amandine</option>
+            <option value="Sacha">Sacha</option>
+            <option value="Padre">Padre</option>
+        </select>
         <button type="submit">Se connecter</button>
     </form>
 </body>
 </html>
+
