--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
     {% endif %}
 
     <form method="POST">
-        <input type="text" name="nom" placeholder="Entrez votre nom" required>
+       <label for="utilisateur">Quel est votre nom ?</label>
         <select name="utilisateur" id="utilisateur">
             <option value="">--Choisir--</option>
             <option value="Amandine">Amandine</option>
