--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,12 @@
         {% endfor %}
     </table>
 
+{% if nom_utilisateur == "Padre" %}
+    <a href="{{ url_for('voir_pronostics') }}">
+        <button style="margin-top: 10px;">📋 Voir les pronostics</button>
+    </a>
+{% endif %}
+
 <h3>🏁 Classement pour le Grand Prix de {{ dernier_gp }}</h3>
 
 </body>
