--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
+<p>Connecté en tant que : {{ nom_utilisateur }}</p>
+
 <head>
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <script>
