--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,13 @@
 	</a>
 {% endif %}
 
-
+{% if nom_utilisateur == "Padre" %}
+    <p>
+        <a href="{{ url_for('voir_tous_les_pronostics') }}">
+            <button>📋 Voir tous les pronostics</button>
+        </a>
+    </p>
+{% endif %}
 
 </body>
 </html>
