--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,13 @@
     </p>
 {% endif %}
 
+{% if nom_utilisateur == "Padre" %}
+    <h3>📥 Télécharger les données</h3>
+    <p><a href="{{ url_for('telecharger_fichier', nom_fichier='pronostics.csv') }}"><button>📋 Pronostics</button></a></p>
+    <p><a href="{{ url_for('telecharger_fichier', nom_fichier='resultats.csv') }}"><button>🏁 Résultats</button></a></p>
+    <p><a href="{{ url_for('telecharger_fichier', nom_fichier='classement.csv') }}"><button>📊 Classement du GP</button></a></p>
+    <p><a href="{{ url_for('telecharger_fichier', nom_fichier='classement_general.csv') }}"><button>🏆 Classement Général</button></a></p>
+{% endif %}
 
 </body>
 </html>
