--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,8 @@
         <a href="/ajouter_pronostic">➕ Ajouter un pronostic</a> |
         <a href="/classement_du_jour">🏁 Classement du jour</a> |
         <a href="/classement_general">📈 Classement général</a>
-        <a href="/historique"> historique</a>
+        <a href="/historique">📚 Historique</a>
+	<a href="{{ url_for('logout') }}">🚪 Quitter</a>
     </nav>
 
 
